--- a/src/main/resources/com/mycompany/gerenciadorcolecoes/cadastros.fxml
+++ b/src/main/resources/com/mycompany/gerenciadorcolecoes/cadastros.fxml
@@ -28,8 +28,8 @@
                               <Font size="17.0" />
                            </font>
                         </Label>
-                        <TextArea layoutX="7.0" layoutY="42.0" prefHeight="113.0" prefWidth="363.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="42.0" />
-                        <Button fx:id="secondaryButton1" alignment="CENTER" layoutX="270.0" layoutY="161.0" onAction="#switchToPrimary" prefHeight="33.0" prefWidth="106.0" text="Cadastrar" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                        <TextArea fx:id="inputDescricaoStatus" layoutX="7.0" layoutY="42.0" prefHeight="113.0" prefWidth="363.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="42.0" />
+                        <Button fx:id="btnCadastrarStatus" alignment="CENTER" layoutX="270.0" layoutY="161.0" onAction="#switchToPrimary" prefHeight="33.0" prefWidth="106.0" text="Cadastrar" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                      </children>
                   </AnchorPane>
             </content>
@@ -43,8 +43,8 @@
                               <Font size="17.0" />
                            </font>
                         </Label>
-                        <TextArea layoutX="6.0" layoutY="42.0" prefHeight="81.0" prefWidth="365.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="42.0" />
-                          <Button fx:id="secondaryButton" layoutX="270.0" layoutY="161.0" onAction="#switchToPrimary" prefHeight="33.0" prefWidth="106.0" text="Cadastrar" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                        <TextArea fx:id="txtDescricaoColecao" layoutX="6.0" layoutY="42.0" prefHeight="81.0" prefWidth="365.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="42.0" />
+                          <Button fx:id="btnCadColecao" layoutX="270.0" layoutY="161.0" onAction="#switchToPrimary" prefHeight="33.0" prefWidth="106.0" text="Cadastrar" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                         <Label layoutX="14.0" layoutY="133.0" prefHeight="21.0" prefWidth="124.0" text="Total de Itens:" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="133.0">
                            <font>
                               <Font size="17.0" />
