--- a/src/main/resources/com/mycompany/gerenciadorcolecoes/index.fxml
+++ b/src/main/resources/com/mycompany/gerenciadorcolecoes/index.fxml
@@ -15,20 +15,16 @@
          <VBox.margin>
             <Insets />
          </VBox.margin></Label>
-      <Button fx:id="btnView" onAction="#switchToThird" text="Visualizar Itens">
+      <Button fx:id="botaoVisualizarItens" onAction="#switchToThird" text="Visualizar Itens">
          <VBox.margin>
             <Insets />
          </VBox.margin></Button>
-      <Button fx:id="btnAdd" layoutX="30.0" layoutY="75.0" text="Adicionar Itens">
+      <Button fx:id="btnAdicionarItens" layoutX="30.0" layoutY="75.0" text="Adicionar Itens">
          <VBox.margin>
             <Insets />
          </VBox.margin>
       </Button>
-         <VBox.margin>
-            <Insets />
-         </VBox.margin>
-      </Button>
-      <Button fx:id="btnCad" layoutX="134.0" layoutY="219.0" onAction="#switchToSecondary" text="Cadastros" />
+      <Button fx:id="btnCadastros" layoutX="134.0" layoutY="219.0" onAction="#switchToSecondary" text="Cadastros" />
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
