--- a/src/main/resources/view/index.fxml
+++ b/src/main/resources/view/index.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="255.0" prefWidth="360.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.gerenciadorcolecoes.IndexController">
+<VBox alignment="CENTER" prefHeight="255.0" prefWidth="360.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.IndexController">
    <children>
       <Label alignment="CENTER" prefHeight="31.0" prefWidth="226.0" text="Gerenciador de Coleções" textAlignment="CENTER">
          <font>
@@ -15,16 +15,16 @@
          <VBox.margin>
             <Insets />
          </VBox.margin></Label>
-      <Button fx:id="btnView" onAction="#switchToThird" text="Visualizar Itens">
+      <Button fx:id="botaoVisualizarItens" onAction="#switchToThird" text="Visualizar Itens">
          <VBox.margin>
             <Insets />
          </VBox.margin></Button>
-      <Button fx:id="btnAdd" layoutX="30.0" layoutY="75.0" text="Adicionar Itens">
+      <Button fx:id="btnAdicionarItens" layoutX="30.0" layoutY="75.0" onAction="#switchToAdd" text="Adicionar Itens">
          <VBox.margin>
             <Insets />
          </VBox.margin>
       </Button>
-      <Button fx:id="btnCad" layoutX="134.0" layoutY="219.0" onAction="#switchToSecondary" text="Cadastros" />
+      <Button fx:id="btnCadastros" layoutX="134.0" layoutY="219.0" onAction="#switchToSecondary" text="Cadastros" />
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
